--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,41 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
+          
+  #test-frontend:
+  #  docker:
+  #    - image: circleci/node:13.8.0
+  #  steps:
+  #    - checkout
+  #    - restore_cache:
+  #        keys: [frontend-test]
+  #    - run:
+  #        name: test front-end
+  #        command: |
+  #          cd frontend
+  #          npm install
+  #          npm run test
+  #    - save_cache:
+  #        paths: [frontend/node_modules]
+  #        key: frontend-test
+  #    
+  #              
+  #test-backend:
+  #  docker:
+  #    - image: circleci/node:13.8.0
+  #  steps:
+  #    - checkout
+  #    - restore_cache:
+  #        keys: [backend-test]
+  #    - run:
+  #        name: test back-end
+  #        command: |
+  #          cd backend
+  #          npm install
+  #          npm run test
+  #    - save_cache:
+  #        paths: [backend/node_modules]
+  #        key: backend-test
 
   
 workflows:
@@ -42,4 +77,8 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
+      #- test-frontend:
+      #    requires: [build-frontend]
+      #- test-backend:
+      #    requires: [build-backend]
      
