--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,8 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit --audit-level=critical
+      #     npm audit --audit-level=critical
+            npm audit fix --audit-level=critical --force  
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-scan
@@ -100,7 +101,8 @@ jobs:
           command: |
              cd backend
              npm install
-             npm audit --audit-level=critical
+      #      npm audit --audit-level=critical
+             npm audit fix --audit-level=critical --force
       - save_cache:
           paths: [backend/node_modules]
           key: backend-scan        
