--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
             cd frontend
             npm install
             npm run build
+            no_output_timeout: 30m
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -32,6 +33,7 @@ jobs:
              cd backend
              npm install
              npm run build
+             no_output_timeout: 30m
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -49,6 +51,7 @@ jobs:
             cd frontend
             npm install
             npm run test
+            no_output_timeout: 30m
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-test
@@ -67,6 +70,7 @@ jobs:
             cd backend
             npm install
             npm run test
+            no_output_timeout: 30m
       - save_cache:
           paths: [backend/node_modules]
           key: backend-test
@@ -84,6 +88,7 @@ jobs:
             cd frontend
             npm install
             npm audit fix --audit-level=critical --force  
+            no_output_timeout: 30m
       #     npm audit --audit-level=critical
       - save_cache:
           paths: [frontend/node_modules]
@@ -102,6 +107,7 @@ jobs:
              cd backend
              npm install
              npm audit fix --audit-level=critical --force
+             no_output_timeout: 30m
       #      npm audit --audit-level=critical
       - save_cache:
           paths: [backend/node_modules]
