--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,9 +87,9 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix --audit-level=critical --force  
+            npm audit --audit-level=critical
             no_output_timeout: 30m
-      #     npm audit --audit-level=critical
+      #     npm audit fix --audit-level=critical --force 
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-scan
@@ -106,9 +106,9 @@ jobs:
           command: |
              cd backend
              npm install
-             npm audit fix --audit-level=critical --force
+             npm audit --audit-level=critical
              no_output_timeout: 30m
-      #      npm audit --audit-level=critical
+      #      npm audit fix --audit-level=critical --force
       - save_cache:
           paths: [backend/node_modules]
           key: backend-scan        
