--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             cd frontend
             npm install
             npm run build
-            no_output_timeout: 30m
+      #     no_output_timeout: 30m
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -33,7 +33,7 @@ jobs:
              cd backend
              npm install
              npm run build
-             no_output_timeout: 30m
+      #      no_output_timeout: 30m
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -51,7 +51,7 @@ jobs:
             cd frontend
             npm install
             npm run test
-            no_output_timeout: 30m
+      #     no_output_timeout: 30m
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-test
@@ -70,7 +70,7 @@ jobs:
             cd backend
             npm install
             npm run test
-            no_output_timeout: 30m
+      #     no_output_timeout: 30m
       - save_cache:
           paths: [backend/node_modules]
           key: backend-test
@@ -87,9 +87,9 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit --audit-level=critical
-            no_output_timeout: 30m
-      #     npm audit fix --audit-level=critical --force 
+            npm audit fix --audit-level=critical --force 
+      #     no_output_timeout: 30m
+      #     npm audit --audit-level=critical   
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-scan
@@ -106,9 +106,9 @@ jobs:
           command: |
              cd backend
              npm install
-             npm audit --audit-level=critical
-             no_output_timeout: 30m
-      #      npm audit fix --audit-level=critical --force
+             npm audit fix --audit-level=critical --force
+      #      npm audit --audit-level=critical
+      #      no_output_timeout: 30m     
       - save_cache:
           paths: [backend/node_modules]
           key: backend-scan        
