--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -193,7 +193,8 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [test-feature-branch]
+              only: [master]
+              #test-feature-branch
       #- configure-infrastructure:
       #    requires: [deploy-infrastructure]
       #- run-migrations:
