--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix --audit-level=critical --force 
+            npm audit fix --audit-level=critical 
       #     npm audit --audit-level=critical   
       - save_cache:
           paths: [frontend/node_modules]
