--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,6 +168,10 @@ jobs:
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:Project,Values=backend" \
               --output text >> inventory
+      - run:
+          name: Install tar utility
+          command: |
+            yum install -y tar gzip
       - persist_to_workspace:
           root: ~/
           paths:
