--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,12 +18,8 @@ commands:
           name: Revert migrations
           when: on_fail
           command: |
-          # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
             URL="https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}"
-          # Test if website exists
             if curl -s --head ${URL} 
-            SUCCESS = 1
-            if(( $SUCCESS==1 )); 
             then
                cd ~/project/backend
                npm install
@@ -210,15 +206,15 @@ jobs:
           command: |
             cd backend
             npm install
+            npm audit fix
             npm run migrations > migrations_dump.txt
-          # Run and save the migration output
-      - run:
-          name: Send migration results to memstash
-          command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-            then
-                curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
-            fi
+      #- run:
+      #    name: Send migration results to memstash
+      #    command: |
+      #      if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+      #      then
+      #          curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
+      #      fi
       - revert-migrations    
   
 workflows:
