--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,8 +206,8 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix
             npm run migrations > migrations_dump.txt
+            npm audit fix --force
       #- run:
       #    name: Send migration results to memstash
       #    command: |
