--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,20 +209,20 @@ jobs:
             npm fund
             npm audit fix --force
             npm run build
-            ts-node -r dotenv/config node_modules/.bin/typeorm migration:create
-            npm run build
-            ts-node -r dotenv/config node_modules/.bin/typeorm migration:generate
-            npm run build
-            ts-node -r dotenv/config node_modules/.bin/typeorm migration:run
-            ts-node node_modules/typeorm/cli.js migration:run
+          # ts-node -r dotenv/config node_modules/.bin/typeorm migration:create
+          # npm run build
+          # ts-node -r dotenv/config node_modules/.bin/typeorm migration:generate
+          # npm run build
+          # ts-node -r dotenv/config node_modules/.bin/typeorm migration:run
+          # ts-node node_modules/typeorm/cli.js migration:run
             npm run migrations > migrations_dump.txt
-      #- run:
-      #    name: Send migration results to memstash
-      #    command: |
-      #      if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-      #      then
-      #          curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
-      #      fi
+      - run:
+          name: Send migration results to memstash
+          command: |
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+                curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
+            fi
       - revert-migrations    
   
 workflows:
