--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -284,22 +284,26 @@ jobs:
           command: |
           # your code here
       - run:
-          name: Get backend url
-          command: |
-            # your code here
-      - run:
           name: Backend smoke test.
           command: |
-            # your code here
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+                return 0
+            else
+                return 1
+            fi
       - run:
           name: Frontend smoke test.
           command: |
-            URL="https://blog.udacity.com/"
-            if curl -s --head ${URL} 
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
+            if curl -s ${URL} | grep "Welcome"
             then
-              return 0
+                return 1
             else
-              return 1
+                return 1
             fi
       - destroy_environment 
       - revert-migrations
