--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -334,14 +334,14 @@ cleanup:
           name: Get old stack workflow id
           command: |
           # your code here
-            export OldWorkflowID="the id here"
-            export STACKS=[] #put the list of stacks here
+          # export OldWorkflowID="the id here"
+          # export STACKS=[] #put the list of stacks here
       - run:
           name: Remove old stacks and files
           command: |
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
-              # your code here
+          # your code here
             fi    
       
       
