--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -230,7 +230,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            npm install
+            'sudo npm install -g npm@latest'
+            node/install-packages
       - run:
           name: Get backend url
           command: |
@@ -262,7 +263,11 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            npm install
+            apk add --update ansible
+            'sudo npm install -g npm@latest'
+            node/install-packages
+            sudo apt-get install python-pip python-dev
+            pip install 'pyyaml<4,>=3.10' awscli --upgrade --user
       - run:
           name: Deploy backend
           command: |
