--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -228,10 +228,26 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install dependencies
+          name: Install ansible
+          command: |
+            apk add --update ansible
+      - run:
+          name: Install npm
           command: |
             'sudo npm install -g npm@latest'
+      - run:
+          name: Install npm
+          command: |
+            npm install
+      - run:
+          name: Install node
+          command: |
             node/install-packages
+      - run:
+          name: Install awscli
+          command: | 
+            pip install 'pyyaml<4,>=3.10' awscli --upgrade --user
+            
       - run:
           name: Get backend url
           command: |
@@ -261,12 +277,20 @@ jobs:
       - attach_workspace:
           at: project/.circleci/ansible/inventory.txt
       - run:
-          name: Install dependencies
+          name: Install ansible
           command: |
             apk add --update ansible
+      - run:
+          name: Install npm
+          command: |
             'sudo npm install -g npm@latest'
+      - run:
+          name: Install node
+          command: |
             node/install-packages
-            sudo apt-get install python-pip python-dev
+      - run:
+          name: Install awscli
+          command: | 
             pip install 'pyyaml<4,>=3.10' awscli --upgrade --user
       - run:
           name: Deploy backend
@@ -280,7 +304,10 @@ jobs:
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy_environment 
+      - run:
+          image: amazon/aws-cli
+          command: |
+            destroy_environment 
       - revert-migrations
 
   smoke-test:
