--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -230,10 +230,6 @@ jobs:
       - run:
           name: Install npm
           command: |
-            'sudo npm install -g npm@latest'
-      - run:
-          name: Install npm
-          command: |
             npm install
       - run:
           name: Install node
@@ -276,10 +272,7 @@ jobs:
           name: Install ansible
           command: |
             apk add --update ansible
-      - run:
-          name: Install node
-          command: |
-            node/install-packages
+          # node/install-packages
       - run:
           name: Install awscli
           command: | 
