--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,12 +227,17 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
-      #- run:
-      #    name: Install node
-      #    command: |
-      #      node/install-packages
-      #      npm install
-      #      pip install 'pyyaml<4,>=3.10' awscli --upgrade --user
+      - run:
+          name: Install node
+          command: |
+             yum update -y
+             yum install -y tar gzip
+             yum install -y python3
+             curl -sL https://rpm.nodesource.com/setup_10.x |  bash -
+             yum install -y nodejs
+             pip3 install ansible
+             pip3 install awscli
+
       - run:
           name: Get backend url
           command: |
@@ -262,14 +267,20 @@ jobs:
       - attach_workspace:
           at: project/.circleci/ansible/inventory.txt
       - run:
-          name: Install ansible
+          name: Install dependencies
           command: |
             apk add --update ansible
-          # node/install-packages
+            yum update -y
+           yum install -y tar gzip
+           yum install -y python3
+           curl -sL https://rpm.nodesource.com/setup_10.x |  bash -
+           yum install -y nodejs
+           pip3 install ansible
+           pip3 install awscli
       - run:
           name: Install awscli
           command: | 
-            pip install 'pyyaml<4,>=3.10' awscli --upgrade --user
+            pip install awscli
       - run:
           name: Deploy backend
           command: |
