--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -273,7 +273,7 @@ jobs:
       - run:
           name: Install 2
           command: |
-            pip3 install ansible
+          # pip3 install ansible
             pip3 install awscli
       - run:
           name: Install 3
