--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -266,16 +266,16 @@ jobs:
           command: |
             apk add --update ansible
             pip3 install awscli
-      - run:
-          name: Install 2
-          command: |
-            RUN apk update -y
-      - run:
-          name: Install 3
-          command: |
-            RUN apk install -y tar gzip
-            curl -sL https://rpm.nodesource.com/setup_10.x |  bash -
-            RUN apk install -y nodejs
+      #- run:
+      #    name: Install 2
+      #    command: |
+      #      RUN apk update -y
+      #- run:
+      #    name: Install 3
+      #    command: |
+      #      RUN apk install -y tar gzip
+      #      curl -sL https://rpm.nodesource.com/setup_10.x |  bash -
+      #      RUN apk install -y nodejs
       - run:
           name: Deploy backend
           command: |
