--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -269,7 +269,7 @@ jobs:
       - run:
           name: Install 2
           command: |
-            apk update -y
+            apk update 
             apk install -y tar gzip
             curl -sL https://rpm.nodesource.com/setup_10.x |  bash -
             apk install -y nodejs
