--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,6 +155,10 @@ jobs:
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
               --tags project=udapeople
       - run:
+          when: on_fail
+          command: |
+            aws cloudformation describe-stack-events --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
+      - run:
           name: Install tar utility
           command: |
             yum install -y tar gzip
