--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -271,21 +271,18 @@ jobs:
             apk add --update ansible
             pip3 install awscli
             apk update 
+            apk upgrade
       - run:
           name: Install 2
           command: |
+            apk add curl
+            apk add bash
             curl -sL https://rpm.nodesource.com/setup_10.x |  bash -
       - run:
           name: Install 3
           command: |
             apk install -y nodejs
             apk install -y tar gzip
-      - run:
-          name: on fail in Install 3
-          when: on_fail
-          command: |
-            apk fix  
-            apk upgrade
       - run:
           name: Deploy backend
           command: |
