--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,7 +168,7 @@ jobs:
             aws ec2 describe-instances \
             \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Key=Name,Values=backend" \
+              --filters "Name=Key,Values=backend" \
               --output text >> inventory
       - persist_to_workspace:
           root: ~/
