--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,7 +172,8 @@ jobs:
             \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:Name,Values=backend" \
-              --output text >> inventory
+              --output text >> project/.circleci/ansible/inventory.txt
+              cat project/.circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
