--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,7 +177,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - project/.circleci/ansible/inventory.txt
+            - ./.circleci/ansible/inventory.txt
       - destroy_environment 
       
       
@@ -268,7 +268,7 @@ jobs:
       - add_ssh_keys:
             fingerprints: ["8e:f1:6e:28:55:12:9e:0d:7b:a6:19:93:8d:3a:42:7f"] 
       - attach_workspace:
-          at: project/.circleci/ansible/inventory.txt
+          at: ./.circleci/ansible/inventory.txt
       - run:
           name: Install 1
           command: |
@@ -296,8 +296,8 @@ jobs:
             tar -C backend -czvf artifact.tar.gz .
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
-            cat inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yml
+            cat ./.circleci/ansible/inventory.txt
+            ansible-playbook -i ./.circleci/ansible/inventory.txt deploy-backend.yml
       - destroy_environment 
       - revert-migrations
 
